crates/pcbc/tests/snapshots/current_budget__current_args_rejected_on_interface_io.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: io() `sink_current`, `source_current` and `signal` are only supported on Net-typed io parameters, not interfaces.
   ╭─[ <TEMP_DIR>/board.zen:4:1 ]
   │
 4 │ SPI = io(Spi, sink_current="10mA")
   │ ─┬─  
   │  ╰─── io() `sink_current`, `source_current` and `signal` are only supported on Net-typed io parameters, not interfaces.
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/board.zen:4:1 (io() `sink_current`, `source_current` and `signal` are only supported on Net-typed io parameters, not interfaces.)

✗ board.zen: Build failed
Error: Build failed with errors
