crates/pcbc/tests/snapshots/current_budget__current_budget_ok.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (3 components)
