crates/pcbc/tests/snapshots/current_budget__current_undeclared_warning.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Net 'NO_CURRENT_INFO' current cannot be inferred: its resistive network cannot be solved from declared data (declare voltage= on the driving rails, or sink_current/source_current on an io())
   ╭─[ <TEMP_DIR>/board.zen:8:9 ]
 8 │other = Net("NO_CURRENT_INFO")
   │                   ╰─────────── Net 'NO_CURRENT_INFO' current cannot be inferred: its resistive network cannot be solved from declared data (declare voltage= on the driving rails, or sink_current/source_current on an io())

✓ board.zen (4 components)
