crates/pcbc/tests/snapshots/current_budget__net_level_signal_overrides_io.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (2 components)
