crates/pcbc/tests/snapshots/current_budget__no_declarations_no_warning.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (1 components)
