crates/pcbc/tests/snapshots/current_budget__signal_conflict_warning.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Net 'X' has conflicting io() signal declarations: clock, digital
   ╭─[ <TEMP_DIR>/board.zen:5:5 ]
 5 │x = Net("X")
   │        ╰──── Net 'X' has conflicting io() signal declarations: clock, digital

✓ board.zen (2 components)
