crates/pcbc/tests/snapshots/current_budget__static_budget_exceeded.snap
---
source: crates/pcbc/tests/current_budget.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Net 'VCC' current budget exceeded: sources supply 0.000100A but sinks draw 0.000250A (declared + statically inferred)
   ╭─[ <TEMP_DIR>/board.zen:5:7 ]
   │
 5 │ vcc = Net("VCC", voltage="5V")
   │       ────────────┬───────────  
   │                   ╰───────────── Net 'VCC' current budget exceeded: sources supply 0.000100A but sinks draw 0.000250A (declared + statically inferred)
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/board.zen:5:7 (Net 'VCC' current budget exceeded: sources supply 0.000100A but sinks draw 0.000250A (declared + statically inferred))

✗ board.zen: Build failed
Error: Build failed with errors
